--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "aind-behavior-curriculum-template"
-description = "A template library for generating a curriculum to interface with aind-behavior-experiment-launcher"
+description = "A template library for generating a curriculum to interface with aind-behavior-experiment-launcher. This library is intended to be used as a starting point for creating a new curriculum and to run unit tests."
 authors = [ {name = "Bruno Cruz", email = "bruno.cruz@alleninstitute.org"}]
 license = {text = "MIT"}
 requires-python = ">=3.11"
@@ -17,6 +17,7 @@ readme = "README.md"
 dynamic = ["version"]
 
 dependencies = [
+    "aind-behavior-services",
 ]
 
 [project.urls]
