Add temporary reference to remote package

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,7 +17,7 @@ readme = "README.md"
 dynamic = ["version"]
 
 dependencies = [
-    "aind-behavior-services",
+    "aind-behavior-curriculum @ git+https://github.com/AllenNeuralDynamics/aind-behavior-curriculum@69f910d538693342685baf5111710b7d34ba9d8f",
     "click>=8.1.7",
 ]
 
@@ -56,3 +56,6 @@ pydocstyle = { convention = 'google' }
 [tool.codespell]
 skip = '.git,*.pdf,*.svg,./docs/_build,uv.lock'
 ignore-words-list = 'nd'
+
+[tool.uv.sources]
+aind-behavior-curriculum = { git = "https://github.com/AllenNeuralDynamics/aind-behavior-curriculum" }
