Setup small demo

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,7 +34,7 @@ dev = [
 ]
 
 [project.scripts]
-curriculum = "aind_behavior_curriculum_template.curriculum:main"
+curriculum = "aind_behavior_curriculum_template.main:main"
 
 [tool.setuptools.packages.find]
 where = ["src"]
