--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,8 +17,8 @@ readme = "README.md"
 dynamic = ["version"]
 
 dependencies = [
-    "aind-behavior-curriculum @ git+https://github.com/AllenNeuralDynamics/aind-behavior-curriculum@759a8065a34dd279695c0f0bd33eda7654b0c489",
-    "click>=8.1.7",
+    "aind-behavior-curriculum @ git+https://github.com/AllenNeuralDynamics/aind-behavior-curriculum@v0.0.30",
+    "click",
 ]
 
 [project.urls]
